--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@opensearch-project/opensearch": "^3.5.1",
+    "dotenv": "^16.5.0"
   }
 }
