add missing line

--- a/scripts/index_mapping.json
+++ b/scripts/index_mapping.json
@@ -6,9 +6,10 @@
           "type": "synonym",
           "synonyms": [
             "tshirt, t-shirt, tee, classic t-shirt",
-            "hoodie, pullover hoodie",
-            "sticker, stickers",
-            "coaster, coasters"
+            "hoodie, pullover, pullover hoodie, sweatshirt",
+            "sticker, stickers, sticker pack",
+            "coaster, coasters",
+            "clock, timepiece"
           ]
         }
       },
